# GlycoGuard

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.ps1
configs/: default.yaml
data/processed/: README.md
data/raw/: README.md
data/synthetic/: README.md
mobile/: App.tsx  README.md  app.json  package-lock.json  package.json
mobile/src/: ReportCard.tsx  RiskCard.tsx  types.ts
notebooks/: README.md
src/glycoguard/: __init__.py  artifacts.py  cli.py  config.py  evaluation.py  gemini_audit.py  live_watch.py  pdf_report.py  reporting.py  risk.py  schemas.py  service.py  validation.py
src/glycoguard/api/: main.py
src/glycoguard/dashboard/: app.py
src/glycoguard/demo/: __init__.py  replay.py  synthetic.py
src/glycoguard/explainability/: shap_explainer.py
src/glycoguard/features/: engineer.py
src/glycoguard/federated/: __init__.py  client.py
src/glycoguard/ingestion/: bundles.py  loader.py  ohio.py
src/glycoguard/models/: tft_model.py  xgboost_model.py
tests/: conftest.py  test_api.py  test_cli.py  test_dashboard.py  test_gemini_audit.py  test_live_watch.py  test_pipeline.py  test_risk.py  test_service.py
