[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glycoguard"
version = "0.1.0"
description = "Context-aware hypoglycaemia risk intelligence MVP."
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-p no:fugue_test -p no:fugue_test_fixtures"
